--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_above="@+id/editText"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="0dp" />
+        android:layout_marginStart="0dp" />
     <EditText
         android:id="@+id/editText"
         android:layout_width="match_parent"
