--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,12 +25,16 @@
         android:hint="Add an item here!"
         android:gravity="center_horizontal"
         ></EditText>
-   <Button
-       android:id="@+id/addButton"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentEnd="true"
-       android:layout_alignParentBottom="true"
-       android:layout_margin="0dp"
-       android:text="Add"></Button>
+
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:text="Add"></Button>
 </RelativeLayout>
