--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,15 +26,16 @@
         android:gravity="center_horizontal"
         ></EditText>
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
-        android:text="Add"></Button>
+        android:layout_margin="8dp"
+        android:layout_gravity="end|bottom"
+        android:background="#FF4763FF"
+        android:backgroundTint="#FBFBFB"
+        android:src="@drawable/icons"
+        android:text="Add"></com.google.android.material.floatingactionbutton.FloatingActionButton>
 </RelativeLayout>
